<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edittext_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/login_user"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            android:textStyle="bold"
            android:maxLength="5"
            app:layout_constraintBottom_toTopOf="@+id/edittext_password"
            app:layout_constraintEnd_toEndOf="@+id/edittext_password"
            app:layout_constraintStart_toStartOf="@+id/edittext_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/login_password"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:maxLength="4"
            app:layout_constraintBottom_toTopOf="@+id/button_accept"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_user" />

        <Button
            android:id="@+id/button_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_button_disabled"
            android:text="@string/login_button"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>