<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edittext_value1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/home_value1"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/edittext_value2"
            app:layout_constraintEnd_toEndOf="@+id/edittext_value2"
            app:layout_constraintStart_toStartOf="@+id/edittext_value2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/edittext_value2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/home_value2"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/button_calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_value1" />

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_button"
            android:text="@string/home_button_calculate_sum"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_value2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>